Unused parameter warning in GraphicsContextCairo.cpp https://bugs.webkit.org/show_bug.cgi?id=217954

Unreviewed.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-10-20

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::platformDrawNativeImage):

Canonical link: https://commits.webkit.org/230680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268729 268f45cc-cd09-0410-ab3c-d52691b4dbfc